--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -163,6 +163,7 @@
         android:layout_marginStart="134dp"
         android:layout_marginTop="170dp"
         android:text="@string/selectBtn"
+        android:onClick="changeImage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
