--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -160,11 +160,11 @@
         android:id="@+id/selectBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="134dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="170dp"
-        android:text="@string/selectBtn"
         android:onClick="changeImage"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/selectBtn"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
 
 
