Fixed margin and spaces

--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -129,9 +129,10 @@
             android:id="@+id/imageView"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginEnd="315dp"
             android:contentDescription="@string/avatarDesc"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="ImageContrastCheck"
