--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -126,7 +126,7 @@
             tools:ignore="TouchTargetSizeCheck" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageView1"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginEnd="315dp"
