--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -136,7 +136,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/userimg"
-            tools:ignore="ImageContrastCheck"
-            tools:srcCompat="@drawable/userimg" />
+            tools:ignore="ImageContrastCheck" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
